# xhec-mlops-project-student

./: .pre-commit-config.yaml  Dockerfile.app  README.md  environment.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml
notebooks/: eda.ipynb  modelling.ipynb
src/modelling/: deployment.py  main.py  predicting.py  preprocessing.py  training.py  utils.py
src/web_service/: main.py
src/web_service/lib/: models.py
src/web_service/local_objects/: model.pkl
