[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
authors = [
  { name = "Virgile Martin", email = "virgile.martin@hec.edu" },
  { name = "Houcine Hassani Idrissi", email = "houcine.hassani-idrissi@hec.edu" }
] # TODO: add authors here
description = "This repository contains the solution for the X-HEC MLOps Project on the industrialization of Abalone age prediction model."
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/VirgileMartinBX23/xhec-mlops-project-student"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "W", "F"]
